FIT добавлена доп фильтрация